MDEV-15306: Wrong/Unexpected result with the value optimizer_use_condition_selectivity set to 4

Currently for selectivity calculation we perform range analysis for a column even when we don't have any statistics(EITS).
This makes less sense but is used to catch contradiction for WHERE condition.

So the solution is to not perform range analysis for selectivity calculation for columns that do not have statistics.